syntax = "proto3";

option java_package = "com.github.sun5066";
option java_outer_classname = "AddressBookProtos";
option java_multiple_files = true;

package grpcchat;

service ChatMessage {
  rpc sendMessage (SendMsgRequest) returns (MsgResponse) {

  }
  rpc getMessage (GetMsgRequest) returns (stream MsgResponse) {

  }
}

message SendMsgRequest {
  string text = 1;
}

message MsgResponse {
  string text = 1;
}

message GetMsgRequest {
  string text = 1;
}

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}